# todo-p2p

./: .dockerignore  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  eslint.config.js  package.json
.claude/skills/todo-architecture/: SKILL.md
.claude/skills/todo-commands/: SKILL.md
.claude/skills/todo-conventions/: SKILL.md
.claude/skills/todo-design/: SKILL.md
.claude/skills/todo-design/references/: audit.md  components.md  screens.md  tailwind.md  tokens.md
.claude/skills/todo-security/: SKILL.md
.claude/skills/todo-testing/: SKILL.md
.github/workflows/: ci.yml
apps/desktop/: package.json  tsconfig.json
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/desktop/src-tauri/src/backup/: mod.rs
apps/desktop/src-tauri/src/iroh/: mod.rs  tests.rs
apps/desktop/src-tauri/src/keystore/: mod.rs
apps/desktop/src-tauri/src/migrations/: mod.rs
apps/desktop/src-tauri/src/storage/: mod.rs
apps/desktop/src-tauri/tests/: automerge_compat.rs
apps/desktop/src-tauri/tests/fixtures/: doc-v1.automerge  doc-v4.automerge
apps/mobile/: README.md  app.json  babel.config.js  global.css  metro.config.js  package.json  tailwind.config.js  tsconfig.json
apps/mobile/app/: _layout.tsx  settings.tsx
apps/mobile/app/(tabs)/: _layout.tsx  inbox.tsx  index.tsx  more.tsx  upcoming.tsx
apps/mobile/src/runtime/: index.ts
apps/web/: bunfig.toml  index.html  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
apps/web/__tests__/: App.test.tsx  bun-jest-dom.d.ts
apps/web/__tests__/helpers/: fakes.ts
apps/web/__tests__/runtime/: nullTransport.test.ts  pairingController.test.ts  peerManager.test.ts  tauriStorage.test.ts  transportEventHub.test.ts
apps/web/__tests__/screens/: ScanPairing.test.tsx
apps/web/e2e/: app.spec.ts  backup.spec.ts  robustness.spec.ts
apps/web/e2e/fixtures/: page.ts
apps/web/src/: App.tsx  config.ts  main.tsx
apps/web/src/components/: BackupDialog.tsx
apps/web/src/runtime/: backupFile.ts  createRuntime.ts  env.ts  globalErrors.ts  irohTauriTransport.ts  irohWebTransport.ts  irohWorker.ts  nullTransport.ts  pairingController.ts  peerManager.ts  tauriStorage.ts  transportEventHub.ts
apps/web/src/screens/: ScanPairing.tsx
apps/web/src/storage/: webKeyStore.ts  webStorage.ts
docs/: ARCHITECTURE.md  ROADMAP.md  design-audit-2026-05-19.md
infra/docker/: docker-compose.yml  web.Dockerfile
scripts/: README.md  bootstrap-icons.sh  build-wasm.sh
scripts/hooks/: forbidden-pkg-managers.sh
tooling/eslint/: index.js
tooling/typescript/: base.json  lib.json
