[package]
name = "todo-p2p-desktop"
version = "0.0.0"
edition = "2021"
publish = false
rust-version = "1.77"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
# Phase 5 (Quick Entry): registers a global Cmd/Ctrl+Space shortcut so the
# overlay can be summoned from any focused app. User-approved per CLAUDE.md
# allowlist rule (only iroh_*, storage_*, dialog, global-shortcut allowed).
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
